[gd_scene load_steps=3 format=3 uid="uid://d2htpev5agwwg"]

[ext_resource type="Script" uid="uid://cb8xsry8ftq0l" path="res://game/ui/CharacterSlot.gd" id="1_3k7mw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.8, 1)

[node name="CharacterSlot" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3k7mw")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterPortrait" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
stretch_mode = 5

[node name="CharacterName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Vide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
